added some stuff

--- a/Step_1.html
+++ b/Step_1.html
@@ -209,7 +209,7 @@
           close off this p element and start a new one 2 lines below (you need to have an empty line in between them). After that, add the second paragraph from <a href="Whats an iPad.html" class="paragraphs" target="_blank">this</a>. If you are finished, your website
           should look something like this:
           </p>
-          <img src="" width="100%" height="auto">
+          <img src="Images/Paragraphs end result.png" width="100%" height="auto">
 
 
       </div>
