finally finished the dumb paragraphs part

--- a/Step_1.html
+++ b/Step_1.html
@@ -208,8 +208,10 @@
           In order to get some practise do this: On a new line below the "What's an iPad?" subheading, copy and paste the first paragraph from <a href="Whats an iPad.html" class="paragraphs" target="_blank">this</a> in between of p tags. Then, add 2 line breaks, or
           close off this p element and start a new one 2 lines below (you need to have an empty line in between them). After that, add the second paragraph from <a href="Whats an iPad.html" class="paragraphs" target="_blank">this</a>. If you are finished, your website
           should look something like this:
-          </p>
           <img src="Images/Paragraphs end result.png" width="100%" height="auto">
+          <br></br>
+          <b>Good job! Next we are going to learn how to </b>
+
 
 
       </div>
