added a website example to help dem noobs

--- a/Step_1.html
+++ b/Step_1.html
@@ -30,7 +30,8 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="Website example.html" target="_blank">Click here if you are stuck</a>
+          <a href="Website example.html" target="_blank">Click here if you need help with the code</a>
+          <a href="Website Completed example.html" target="_blank">Click here if you are wondering how your website should look like</a>
         </div>
       </div>
       </div>
@@ -210,7 +211,7 @@
           should look something like this:
           <img src="Images/Paragraphs end result.png" width="100%" height="auto">
           <br></br>
-          <b>Good job! Next we are going to learn how to </b>
+          <b style="text-align: right;">Good job! Next we are going to learn how to add images into your website.</b>
 
 
 
