adding the image bit

--- a/Step_1.html
+++ b/Step_1.html
@@ -171,7 +171,7 @@
         </p>
       </div>
 
-      <div class"paragraphs">
+      <div class="paragraphs">
         <h3 style="margin-bottom:3%;"> Paragraphs </h3>
         <img class="paragraphs" src="https://github.com/veryniceperson/veryniceperson.github.io/blob/master/Images/Paragraph%20image.png?raw=true" width="25%" height="25%" style="float: right; margin-left: 5%; right: 0;">
         <p> In this section you will learn how to use paragraphs and line breaks. in your website. Paragraphs are useful for adding information about a topic on your website. Paragraphs are usually located below the heading or sub-heading of you website.
@@ -211,7 +211,9 @@
           should look something like this:
           <img src="Images/Paragraphs end result.png" width="100%" height="auto">
           <br></br>
-          <b style="text-align: right;">Good job! Next we are going to learn how to add images into your website.</b>
+          <b>Good job! Next we are going to learn how to add images into your website.</b>
+        </p>
+
 
 
 
