trying to add the sections nav bar

--- a/Step_1.html
+++ b/Step_1.html
@@ -34,6 +34,15 @@
           <a href="Website Completed example.html" target="_blank">Click here if you are wondering how your website should look like</a>
         </div>
       </div>
+        <div class="dropdown">
+          <button class="dropbtn"> Jump to section
+            <i class="fa fa-caret-down"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="#code_parts">Click here if you need help with the code</a>
+            <a href="Website Completed example.html" target="_blank">Click here if you are wondering how your website should look like</a>
+          </div>
+        </div>
       </div>
       </div>
 
@@ -45,6 +54,7 @@
       <b>Let's get started!<b>
       </h2>
 
+      <a name="code_parts"></a>
       <div class="HTMLcode_parts">
         <h3 style="margin-bottom:3%;"> Parts of HTML code </h3>
         <img src="https://github.com/veryniceperson/veryniceperson.github.io/blob/master/Images/HTML_Anatomy.png?raw=true" alt="Main parts of HTML code" width="40%" height="auto">
@@ -213,11 +223,9 @@
           <br></br>
           <b>Good job! Next we are going to learn how to add images into your website.</b>
         </p>
-
-
-
-
       </div>
+
+      <div class=""
 
 
 
