adding the nav bar section thingy

--- a/Step_1.html
+++ b/Step_1.html
@@ -39,7 +39,7 @@
             <i class="fa fa-caret-down"></i>
           </button>
           <div class="dropdown-content">
-            <a href="#code_parts">Click here if you need help with the code</a>
+            <a href="#code_parts">Parts of HTML code</a>
             <a href="Website Completed example.html" target="_blank">Click here if you are wondering how your website should look like</a>
           </div>
         </div>
