finished the nav bar sections part

--- a/Step_1.html
+++ b/Step_1.html
@@ -40,7 +40,11 @@
           </button>
           <div class="dropdown-content">
             <a href="#code_parts">Parts of HTML code</a>
-            <a href="Website Completed example.html" target="_blank">Click here if you are wondering how your website should look like</a>
+            <a href="#HTMLhierarchy">HTML Hierarchy</a>
+            <a href="#Gettingstarted"">Getting Started</a>
+            <a href="#headings">Headings</a>
+            <a href="#Paragraphs">Paragraphs</a>
+            <a href="#images">Images</a>
           </div>
         </div>
       </div>
@@ -56,7 +60,7 @@
 
       <a name="code_parts"></a>
       <div class="HTMLcode_parts">
-        <h3 style="margin-bottom:3%;"> Parts of HTML code </h3>
+        <h3 style="margin-bottom:3%;">Parts of HTML code</h3>
         <img src="https://github.com/veryniceperson/veryniceperson.github.io/blob/master/Images/HTML_Anatomy.png?raw=true" alt="Main parts of HTML code" width="40%" height="auto">
         <p> In the image to the right you would be able to see a diagram that represents
           the parts of a single element. The <b> element </b> is a part of code in HTML which
@@ -91,8 +95,9 @@
         </p>
       </div>
 
+      <a name="HTMLhierarchy"></a>
       <div class="HTML_hierarchy">
-        <h3 style="margin-bottom:3%;"> HTML Hierarchy <i> (HTML code structuring) </i> </h3>
+        <h3 style="margin-bottom:3%;">HTML Hierarchy<i> (HTML code structuring) </i> </h3>
         <img src="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/HTML%20Hierarchy.png" alt='HTML Hierarchy exampls' width="100%" height="auto">
         <p> In the image above you would be able to see how HTML hierarchy works. It starts with parent, then goes on
           with children, siblings, grandchildren and so on. It is important to understand HTML Hierarchy because the
@@ -102,8 +107,9 @@
         </p>
       </div>
 
+      <a name="Gettingstarted"></a>
       <div class="Getting_Started">
-        <h3 style="margin-bottom:3%;"> Getting Started </h3>
+        <h3 style="margin-bottom:3%;">Getting Started</h3>
         <img src="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/Visual%20Studio%20Image.png" width="20%" height="20%">
         <p> Now we are going to start writing some code! So get your keybooard ready and let's get started!
           <br> </br>
@@ -158,8 +164,9 @@
         </p>
       </div>
 
+      <a name="headings"></a>
       <div class="Headings">
-        <h3 style="margin-bottom:3%;"> Headings </h3>
+        <h3 style="margin-bottom:3%;">Headings</h3>
         <img src="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/Headings%20Image.png" width="25%" height="25%">
         <p>In this section we will learn how to use headings in your website. Headings are useful for making your website more organised, by including things such as headings and sub-headings for sections of your website. Headings make sure that your viewers know what the
           content would be about and it makes navigating around your website much easier. The headers is also what grabs the viewer's attention, which means that you would have to add a creative heading for your website.
@@ -181,6 +188,7 @@
         </p>
       </div>
 
+      <a name="Paragraphs"></a>
       <div class="paragraphs">
         <h3 style="margin-bottom:3%;"> Paragraphs </h3>
         <img class="paragraphs" src="https://github.com/veryniceperson/veryniceperson.github.io/blob/master/Images/Paragraph%20image.png?raw=true" width="25%" height="25%" style="float: right; margin-left: 5%; right: 0;">
@@ -225,7 +233,10 @@
         </p>
       </div>
 
-      <div class=""
+      <a name="images"></a>
+      <div class="Imagesinfo">
+        <h3 style="margin-bottom: 3%;">Images</h3>
+      </div>
 
 
 
