Finishing up the image part

--- a/Step_1.html
+++ b/Step_1.html
@@ -250,7 +250,7 @@
          Next, include the link using the src tag and remember to close off the element. 
          <br><br>
          Your website should look like this:
-         <img src="First img example.png" width="100%" height="auto">
+         <img src="Images/Image example 1.png" width="100%" height="auto">
          <br>
          For now, the images looks a bit too big. The size of the image by default depends on the size of the image originally. However, we can adjust this very easily.
          <br><br>
@@ -261,7 +261,8 @@
          However, if you set it too 100px, the image width would only be 100px on all screens, meaning that it would be too small for some screens and too big for others. 
          <br><br>
          Let's get some practise. Set the width of you image to any value, either in px and 100% and test with differnet widths, in order to know what each value does. 
-         If you can't choose, set your image width to 30%
+         If you can't choose, set your image width to 30%. If you had chosen to set it to 30%, it should look something like this:
+         <img src="Images/Image example 2.png" width="100%" height="auto">
         </p>
       </div>
 
