finished the image part

--- a/Step_1.html
+++ b/Step_1.html
@@ -45,6 +45,7 @@
             <a href="#headings">Headings</a>
             <a href="#Paragraphs">Paragraphs</a>
             <a href="#images">Images</a>
+            <a href="#buttons_info">Buttons</a>
           </div>
         </div>
       </div>
@@ -137,7 +138,8 @@
           <b> The title on the tab of a browser </b>
           <br>
           Now, type in <code> &lt;title&gt; </code> and <code> &lt;/title&gt; </code>. This would allow you to include a title on the tab of a browser for your website. This is optional but, if you don't include a title, the website's
-          name on the tab would appear as Untitled (You should include the title text in between the opening and closing tag).
+          name on the tab would appear as Untitled (You should include the title text in between the opening and closing tag). For practice, lets add a title. In this course, we will learn how to program website by writing about the first ipad.
+          In between the opening and closing tag, write a suitable title, such as <code>The first iPad</code>. If you open up your html document, you would see that the website itself is blank, but the tab displays the name that you had input. 
           <br> </br>
           If you want to include a website icon, you can include this code after the <code> &lt;title&gt; </code>: <code> &lt;link rel="shortcut icon" href="Insert image link here" /&gt; </code>
           This is optional, but highly recommended because the website icon on the tab of the browser adds a nice touch and makes your website's tab more distinguishable compared to other tabs.
@@ -259,10 +261,31 @@
          <br>
          For example, if you set the width of an image to 100%, the image width would take 100% of the screen width, no matter what. 
          However, if you set it too 100px, the image width would only be 100px on all screens, meaning that it would be too small for some screens and too big for others. 
+         In addition there is a <code>auto</code> property, which adjust the size of the image based on things such as screen size and the height property of the image (if you have one.)
          <br><br>
          Let's get some practise. Set the width of you image to any value, either in px and 100% and test with differnet widths, in order to know what each value does. 
          If you can't choose, set your image width to 30%. If you had chosen to set it to 30%, it should look something like this:
          <img src="Images/Image example 2.png" width="100%" height="auto">
+         <br>
+         You can see that this looks much better than the first example, because it is smaller and much more organised. 
+         Now we are going to learn how to adjust the height of the image. It is exactly the same as changing the width, you just have to replace "width" with "height". 
+         <br><br>
+         Let's practise by changing the height of your image. Play around with the height, change the px value or the % value, or even change it to auto to see what happens. 
+         If you can decide, set the height to auto. If you set the height to auto, then your website should look like the same, because the web browser knows that the image would 
+         look best with the default height, because of the width. 
+         <br><br>
+         You can even use both of them at one, just put them one after the other, no matter the order. Take a look at this example: <code>&lt;img src="" width="" height=""&gt;</code>
+         <br> <br>
+         <b>Good job! Next we are going to learn how to use buttons in your website.</b>
+        </p>
+      </div>
+
+      <a name="buttons_info"></a>
+      <div class="buttons_info">
+        <h1 style="margin-bottom: 3%;">Buttons</h1>
+        <img src="" width="" height="">
+        <p>
+
         </p>
       </div>
 
