finished fixing up some typos

--- a/Step_1.html
+++ b/Step_1.html
@@ -111,15 +111,15 @@
       <a name="Gettingstarted"></a>
       <div class="Getting_Started">
         <h3 style="margin-bottom:3%;">Getting Started</h3>
-        <img src="https://raw.githubusercontent.com/veryniceperson/veryniceperson.github.io/master/Images/Visual%20Studio%20Image.png" width="20%" height="20%">
+        <img src="Images/Visual Studio Code.png" width="20%" height="20%">
         <p> Now we are going to start writing some code! So get your keybooard ready and let's get started!
           <br> </br>
           First of all we are going to need a platform on which we would be able to write our code on. You can either use your own, something
-          like <a href="https://atom.io" target="_blank"> Atom</a> or <a href="https://visualstudio.microsoft.com" target="_blank"> Visual Studio</a>. But if you are unable
+          like <a href="https://atom.io" target="_blank"> Atom</a> or <a href="https://code.visualstudio.com" target="_blank"> Visual Studio Code</a>. But if you are unable
           to do so, use a <a href="https://repl.it/languages/html" target="_blank"> Online HTML and CSS editor</a>.
           <img src="https://github.com/veryniceperson/veryniceperson.github.io/blob/master/Images/Atom.io%20icon.png?raw=true" width="20%" height="20%">
           <br> </br>
-          <b> Starting off on a black page </b>
+          <b> Starting off on a blank page </b>
           <br>
           Now, erase anything that is present in your HTML editor. Then on top of your document write <code> &lt;!DOCTYPE html&gt; </code>. This will allow the user's browser to
           know what type of file it is and how to deal with the file. This should be included in all of your html documents.
