finished with buttons, now starting the anchor

--- a/Step_1.html
+++ b/Step_1.html
@@ -45,6 +45,7 @@
             <a href="#Paragraphs">Paragraphs</a>
             <a href="#images">Images</a>
             <a href="#buttons_info">Buttons</a>
+            <a href="#anchor">The anchor element</a>
           </div>
         </div>
       </div>
@@ -290,12 +291,15 @@
         </p>
           <br>
 
-          <table rules="all">
+        <tbody>
+          <table rules="all" border="1">
             <tr>
+              <thead>
               <th>Attribute</th>
               <th>Value(s)</th>
               <th>Description</th>
               <th>Example</th>
+              <thead></thead>
             </tr>
 
             <tr>
@@ -403,9 +407,29 @@
                 <code>&lt;button type="button" value="<i>Insert button value here</i>"&gt; &lt;/button&gt;</code>
               </td>
             </tr>
+
           </table>
+        </tbody>
+        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <p> These are the attributes that can be used for your button element. The button element is mainly used to send things like forms to servers and some people can be confused 
+          on how to use it, becuase they will think that the button element can be used for making link buttons. The button element is actually not very good to use for links and 
+          in the next section we will learn how to use the anchor, which you can use to make buttons that will act as links for the user.
+        </p>
       </div>
 
+      <a name="anchor"></a>
+      <div class="anchor">
+        <h3 style="margin-bottom: 3%;">The anchor element</h3>
+        <p>The anchor element is mainly used to create buttons that send users to a specfic link, a specific part of a webpage or a download link. 
+          The main attribute for the a element is the href attribute, in which you would include a website link. Even thought the a element just appears as a 
+          piece of text instead of a button, using css you can make the a element into an interesting button that reacts to things like a mouse hover above it.
+          <br><br>
+          By default, the a element changes colour according to the actions of the user. A link that had not been visited by the user is underline and has a blue colour. 
+          A link that has been visited by the user will be underlined and will have a purple colour. An active link (a link that is clicked on and is being fetched by their browser) 
+          will be underlined and coloured red. 
+        </p>
+      </div>
 
+      </div>
     </body>
 </html>
