--- a/Step_1.html
+++ b/Step_1.html
@@ -427,7 +427,129 @@
           By default, the a element changes colour according to the actions of the user. A link that had not been visited by the user is underline and has a blue colour. 
           A link that has been visited by the user will be underlined and will have a purple colour. An active link (a link that is clicked on and is being fetched by their browser) 
           will be underlined and coloured red. 
+          <br><br>
+          Below you will find a table that specifies attributes that can be used with the a element. We will go into detail about the more important ones after the table.
         </p>
+        <br><br>
+        <tbody>
+          <table rules="all" border="1">
+            <tr>
+              <thead>
+              <th>Attribute</th>
+              <th>Value(s)</th>
+              <th>Description</th>
+              <th>Example</th>
+              </thead>
+            </tr>
+
+            <tr>
+              <td>href</td>
+              <td>URL</td>
+              <td>Specifies the URL that the anchor element goes to</td> 
+              <td>
+                <code>&lt;a href="<i>Insert URL here</i>"&gt; &lt;/a&gt;</code>
+              </td>
+            </tr>
+
+            <tr>
+              <td>download</td>
+              <td>URL or filename</td>
+              <td>This specifies a URL or filename that will be download when the user clicks on the a element</td>
+              <td>
+                <code>&lt;a download="<i>Insert URL or filename here</i>"&gt; &lt;/a&gt;</code>
+              </td>
+            </tr>
+
+            <tr>
+              <td>formaction</td>
+              <td>A link</td>
+              <td>This attribute specifies to where the form data inputed by a user should go. This only work when the type is set to &quot;submit&quot;</td>
+              <td><code>&lt;button type=&quot;submit&quot; formaction&gt; &lt;/button&gt;</code></td>
+            </tr>
+
+            <tr>
+              <td>formenctype</td>
+              <td>application/x-www-form-urlencoded <br> multipart/form-data <br> text/plain</td>
+              <td>This attribute specifies how data should be encoded before sending it to a server. This only works for type="submit" buttons. </td>
+              <td>
+                <code>&lt;button type="submit" formenctype="application/x-www-form-urlencoded"&gt; &lt;/button&gt;</code>
+                <br><br>
+                <code>&lt;button type="submit" formenctype="multipart/form-data"&gt; &lt;/button&gt;</code>
+                <br><br>
+                <code>&lt;button type="submit" formenctype="text/plain"&gt; &lt;/button&gt;</code>
+              </td>
+            </tr>
+
+            <tr>
+              <td>formmethod</td>
+              <td>get<br>post</td>
+              <td>This attribute specifies how form date inputted by the user should be sent to the server. This only works for type="submit" buttons.</td>
+              <td>
+                <code>&lt;button type="submit" formmethod="get"&gt; &lt;/button&gt;</code>
+                <br><br>
+                <code>&lt;button type="submit" formmethod="post"&gt; &lt;/button&gt;</code>
+              </td>
+            </tr>
+
+            <tr>
+              <td>formnovalidate</td>
+              <td>formnovalidate</td>
+              <td>This attribute specifies that form data inputted by a user shouldn't validate when it is submitted to the sever. This only works for type="submit" buttons. </td>
+              <td>
+                <code>&lt;button type="submit" formnovalidate&gt; &lt;/button&gt;</code>
+              </td>
+            </tr>
+
+            <tr>
+              <td>formtarget</td>
+              <td>_blank <br> _self <br> _parent <br> _top <br> framename</td>
+              <td>This attribute specifies where to display the response for a user after they had submitted a form. This only works for type="submit" buttons.</td>
+              <td>
+                <code>&lt;button type="submit" formtarget="_blank"&gt; &lt;/button&gt;</code>
+                <br><br>
+                <code>&lt;button type="submit" formtarget="_self"&gt; &lt;/button&gt;</code>
+                <br><br>
+                <code>&lt;button type="submit" formtarget="_parent"&gt; &lt;/button&gt;</code>
+                <br><br>
+                <code>&lt;button type="submit" formtarget="_top"&gt; &lt;/button&gt;</code>
+                <br><br>
+                <code>&lt;button type="submit" framename&gt; &lt;/button&gt;</code>
+              </td>
+            </tr>
+
+            <tr>
+              <td>name</td>
+              <td>name for a button</td>
+              <td>This attribute is used to specify a name for a button</td>
+              <td>
+                <code>&lt;button type="button" name="<i>Insert button name here</i>"&gt; &lt;/button&gt;</code>
+              </td>
+            </tr>
+
+            <tr>
+              <td>type</td>
+              <td>button <br>reset <br>submit </td>
+              <td>This attribute is used to specify the type of a button. <i>The reset button is used to reset a form, so the user can insert new data into the form</i></td>
+              <td>
+                <code>&lt;button type="button"&gt; &lt;/button&gt;</code>
+                <br><br>
+                <code>&lt;button type="reset"&gt; &lt;/button&gt;</code>
+                <br>
+                <code>&lt;button type="submit"&gt; &lt;/button&gt;</code>
+              </td>
+            </tr>
+
+            <tr>
+              <td>value</td>
+              <td>button value, which is in text form</td>
+              <td>This attribute is used to specify a value for a button</td>
+              <td>
+                <code>&lt;button type="button" value="<i>Insert button value here</i>"&gt; &lt;/button&gt;</code>
+              </td>
+            </tr>
+
+          </table>
+        </tbody>
       </div>
 
       </div>
