almost finished with the a thing

--- a/Step_1.html
+++ b/Step_1.html
@@ -494,11 +494,11 @@
                 This data is used for things such as analytics, optimised caching and ad targeting. 
               </td>
               <td>
-                <code>&lt;a referrerpolicy="no-referrer"&gt; &lt;/a&gt;</code>
-                <code>&lt;a referrerpolicy="no-referrer-when-downgrade"&gt; &lt;/a&gt;</code>
-                <code>&lt;a referrerpolicy="origin"&gt; &lt;/a&gt;</code>
-                <code>&lt;a referrerpolicy="origin-when-cross-origin"&gt; &lt;/a&gt;</code>
-                <code>&lt;a referrerpolicy="unsafe-url"&gt; &lt;/a&gt;</code>
+                <code>&lt;a referrerpolicy="no-referrer"&gt; &lt;/a&gt;</code><br><br>
+                <code>&lt;a referrerpolicy="no-referrer-when-downgrade"&gt; &lt;/a&gt;</code><br><br>
+                <code>&lt;a referrerpolicy="origin"&gt; &lt;/a&gt;</code><br><br>
+                <code>&lt;a referrerpolicy="origin-when-cross-origin"&gt; &lt;/a&gt;</code><br><br>
+                <code>&lt;a referrerpolicy="unsafe-url"&gt; &lt;/a&gt;</code><br><br>
               </td>
             </tr>
 
@@ -507,49 +507,48 @@
               <td>alternate<br>author<br>bookmark<br>external<br>help<br>license<br>next<br>nofollow<br>noreferrer<br>noopener<br>prev<br>tag<br>search</td>
               <td>This attribute specifies the relationship between the webpage that the user is in and the webpage that is linked in the a element.</td>
               <td>
-                <code>&lt;a rel="alternate"&gt; &lt;/a&gt;</code>
-                <code>&lt;a rel="author"&gt; &lt;/a&gt;</code>
-                <code>&lt;a rel="bookmark"&gt; &lt;/a&gt;</code>
-                <code>&lt;a rel="external"&gt; &lt;/a&gt;</code>
-                <code>&lt;a rel="help"&gt; &lt;/a&gt;</code>
-                <code>&lt;a rel="license"&gt; &lt;/a&gt;</code>
+                <code>&lt;a rel="alternate"&gt; &lt;/a&gt;</code><br><br>
+                <code>&lt;a rel="author"&gt; &lt;/a&gt;</code><br><br>
+                <code>&lt;a rel="bookmark"&gt; &lt;/a&gt;</code><br><br>
+                <code>&lt;a rel="external"&gt; &lt;/a&gt;</code><br><br>
+                <code>&lt;a rel="help"&gt; &lt;/a&gt;</code><br><br>
+                <code>&lt;a rel="license"&gt; &lt;/a&gt;</code> <br><br>
                 <code>&lt;a rel="next"&gt; &lt;/a&gt;</code>
+                <br><br>
                 <code>&lt;a rel="nofollow"&gt; &lt;/a&gt;</code>
+                <br><br>
                 <code>&lt;a rel="noreferrer"&gt; &lt;/a&gt;</code>
+                <br><br>
                 <code>&lt;a rel="prev"&gt; &lt;/a&gt;</code>
+                <br><br>
                 <code>&lt;a rel="tag"&gt; &lt;/a&gt;</code>
+                <br><br>
                 <code>&lt;a rel="search"&gt; &lt;/a&gt;</code>
+                <br><br>
               </td>
             </tr>
 
             <tr>
-              <td>name</td>
-              <td>name for a button</td>
-              <td>This attribute is used to specify a name for a button</td>
+              <td>target</td>
+              <td>_parent<br>_blank<br>_self<br>top</td>
+              <td>This attribute is used to specify where the browser should open the linked website.</td>
               <td>
-                <code>&lt;button type="button" name="<i>Insert button name here</i>"&gt; &lt;/button&gt;</code>
+                <code>&lt;a target="_parent"&gt; &lt;/a&gt;</code>
+                <br><br>
+                <code>&lt;a target="_blank"&gt; &lt;/a&gt;</code>
+                <br><br>
+                <code>&lt;a target="_self"&gt; &lt;/a&gt;</code>
+                <br><br>
+                <code>&lt;a target="_top"&gt; &lt;/a&gt;</code>
+                <br><br>
               </td>
             </tr>
-
             <tr>
               <td>type</td>
-              <td>button <br>reset <br>submit </td>
-              <td>This attribute is used to specify the type of a button. <i>The reset button is used to reset a form, so the user can insert new data into the form</i></td>
+              <td>type of media</td>
+              <td>This attribute is used to specify the type of media that the link in the a element contains. A list of all the types of media can be found <a style="color: white;" href="https://www.iana.org/assignments/media-types/media-types.xhtml">here</a></td>
               <td>
-                <code>&lt;button type="button"&gt; &lt;/button&gt;</code>
-                <br><br>
-                <code>&lt;button type="reset"&gt; &lt;/button&gt;</code>
-                <br>
-                <code>&lt;button type="submit"&gt; &lt;/button&gt;</code>
-              </td>
-            </tr>
-
-            <tr>
-              <td>value</td>
-              <td>button value, which is in text form</td>
-              <td>This attribute is used to specify a value for a button</td>
-              <td>
-                <code>&lt;button type="button" value="<i>Insert button value here</i>"&gt; &lt;/button&gt;</code>
+                <code>&lt;a type="<i>Insert type of media here</i>"&gt; &lt;/a&gt;</code>
               </td>
             </tr>
 
